# Elevator-simulation

./: .gitignore  README.md  pyproject.toml
configs/: highrise_commuter.json
scripts/: run_simulation.py
src/elevator_sim/: __init__.py  arrivals.py  config.py  elevator.py  metrics.py  passenger.py  simulation.py
src/elevator_sim/strategy/: base.py  collective.py  destination_dispatch.py  energy_saver.py  zoned.py
tests/: test_metrics.py  test_simulation.py
